reduced size of intro pic

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main">
-									<img src="images/csgf.jpg" alt="csgf" style="width: 50%; height: auto"  />
+									<img src="images/csgf.jpg" alt="csgf" style="width: 50%; height: auto; display: block; margin: 0 auto;"  />
 								</span>
 								
 								<p> I earned my Bachelors of Science in Physics at Florida International University in the spring of 2017. While there I was a Resident Assistant for two years, and worked as a tutor. As a member of the Society of Physics, I participated in public outreach as a volunteer tutor and public science fairs. I was also introduced to computational research for the first time in the form of analyzing astronomical data to identify potential three-body stellar systems. For our version of a senior thesis, I focused on the fundamental physics and early developments in nMRI spectroscopy. <p>
