updating welcome page with current status

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Gabriel Casabona</h1>
-								<p>Welcome! I am a recent Physics MS alum from Northwestern University, where my research interests lied in the domain of theoretical and computational astrophysics, more specifically concentrating on compact binary object mergers and astrophysical flows. As an alum, I am now excited to transition from academia into industry and teaching roles.</p>
+								<p>Welcome! I am currently an Engineering and Applied Sciences PhD student at the University of Massachusetts Dartmouth, where my research interests lie in the domain of theoretical and computational astrophysics, more specifically concentrating on compact binary object mergers and astrophysical flows. As a teaching fellow here as well, I am also an instructor for College Algebra. </p>
 							</div>
 						</div>
 						<nav>
