--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								<h2 class="major">Contact</h2>
 								<h2> Email </h2>
 								<ul class="alt">
-                                                                                <li>casabona@u.northwestern.edu</li>
+                                                                                <li>gcasabona@umassd.edu</li>
                                                                                 <li>gcasabona1@gmail.com</li>
                                                                         </ul>
 								<ul class="icons">
